syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ibct.kanganedu";
option java_outer_classname = "KangAnProto";
option objc_class_prefix = "HLW";

package grp1;

message StdAsk {
    string AskName = 1;
    string AskStr = 2;
}

message StdRet {
    string RetSta = 1;
    string RetStr  = 2;
}

message ExampleReq {
    string ReqStr = 1;
}

message ExampleResp {
    string RespStr = 1;
}

service Grp1 {
    rpc StdRpc (StdAsk) returns (StdRet) {}
    rpc ExampleRpc (ExampleReq) returns (ExampleResp) {}
}